<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/Inicio"
            android:icon="@drawable/house"
            android:title="@string/inicio" />
    </group>

    <group
        android:id="@+id/third_section"
        android:checkableBehavior="none">
        <item
            android:id="@+id/Cuenta"
            android:icon="@drawable/perfil"
            android:title="@string/cuenta" />
        <item
            android:id="@+id/Favoritos"
            android:icon="@drawable/fav"
            android:title="@string/favoritos" />

        <item
            android:id="@+id/Ajustes"
            android:icon="@drawable/ajuestes"
            android:title="@string/ajustes" />
    </group>

    <group
        android:id="@+id/third_section2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/CerrarSesion"
            android:icon="@drawable/logout"
            android:title="@string/cerrar_sesion" />
    </group>


</menu>