<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RecoverPassword"
    android:background="@color/lightgrey"
    android:padding="@dimen/default_margin">

    <ImageView
        android:id="@+id/img_logorecover"
        android:layout_width="216dp"
        android:layout_height="173dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/logoClovis" />

    <TextView
        android:id="@+id/txt_recover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_texts"
        android:gravity="center"
        android:text="@string/recuperar_contra"
        android:textSize="@dimen/size_title3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logorecover" />

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_textsSmall"
        android:gravity="center"
        android:text="@string/proporcionanos_tu_correo_electronico_y_te_mandaremos_las_instrucciones_para_recuperar_la_contrase_a"
        android:textSize="@dimen/size_title4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recover"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tlt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginTopBig"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="@dimen/size_title4"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_info"
        app:layout_constraintTop_toBottomOf="@+id/txt_info" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_email_recover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tlt_email"
        app:layout_constraintTop_toBottomOf="@+id/tlt_email"
        tools:layout_editor_absoluteY="325dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInput_email_recover_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/size_title4"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cancelar"
        style="@style/boton"
        android:layout_width="@dimen/boton_width_cancEnvi"
        android:layout_height="@dimen/boton_height"
        android:layout_marginTop="100dp"
        android:text="@string/cancelar"
        app:cornerRadius="@dimen/buttons_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_email_recover"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_enviar"
        style="@style/boton"
        android:layout_width="@dimen/boton_width_cancEnvi"
        android:layout_height="@dimen/boton_height"
        android:layout_marginTop="100dp"
        android:text="@string/enviar"
        app:cornerRadius="@dimen/buttons_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_email_recover"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>